# bbs

./: README.md  pyproject.toml  realestate.ipynb  snowplows.ipynb
bbs/metrotransit/: __init__.py  display.py
bbs/metrotransit/resources/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  go.txt  infinite.txt
bbs/realestate/: __init__.py  compile.py
bbs/realestate/resources/: census_5_year.csv  census_data.csv  states.json
bbs/snowplows/: __init__.py  compile.py
