[tool.poetry]
name = "bbs"
version = "0.1.0"
description = ""
authors = ["Kevin Schiroo <kjschiroo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metrotransit = "bbs.metrotransit:main"
