[tool.poetry]
name = "bbs"
version = "0.1.0"
description = ""
authors = ["Kevin Schiroo <kjschiroo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.40.0"
boto3 = "^1.34.9"
pandas = "^2.1.4"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
shapely = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metrotransit = "bbs.metrotransit:main"
snowplow-comp = "bbs.snowplows.compile:main"
realestate-comp = "bbs.realestate.compile:main"
